2007-01-24  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Handle shutdown(2) macros for Windows.
	* network.h (SHUT_RD, SHUT_WR, SHUT_RDWR): Define for Windows.

2007-01-23  Akim Demaille  <akim@lrde.epita.fr>

	Comments removal
	* network.h: Remove obsolete comments.

2007-01-23  Akim Demaille  <akim@lrde.epita.fr>

	LIBPORT_FD_SET
	* libport/network.h: Define it here.

2007-01-21  Akim Demaille  <akim@lrde.epita.fr>

	Windows portability
	* tests/Makefile.am (TESTS): $(EXEEXT) can be appended to
	check_PROGRAMS.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Bad typo
	* libport/tests/Makefile.am: Add missing rparen.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Use init.mk
	* libport/tests/Makefile.am: here.
	Adjust.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	conversion from ufloats to long long
	* ufloat.hh: here.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	urbi -> libport
	* README, utime.hh: here.

2007-01-17  Akim Demaille  <akim.demaille@free.fr>

	compiler.hh
	* compiler.hh: New.
	* libport.mk: Ship it.

2007-01-12  Akim Demaille  <demaille@gostai.com>

	Fix
	* ull-fixed-point.cc: Remove a trailing #endif.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Warning fix
	* semaphore.hxx: Don't name useless arguments.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix semaphore on Windows
	* semaphore.hxx: Another typo in var name.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix test suite
	* tests/singleton1.cc, tests/singleton2.cc: namespace fixes.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix semaphores on OSX
	* semaphore.hxx: Typo in a var name.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Semaphore cleanup
	* semaphore.hh, semaphore.hxx (Semaphore::sem): Rename as...
	(Semaphore::sem_): this.
	(Semaphore::counter_): remove, should be a simple static variable.
	Do not use assert to check the return value of code that must
	be run.

2007-01-11  Akim Demaille  <demaille@gostai.com>
