@@ -23,6 +23,11 @@ typedef int socklen_t;
 #  define SHUT_RD SD_RECEIVE
 #  define SHUT_WR SD_SEND
 
+/* The 4th argument is usually a const void* on UNIX and a const char* on
+ * Windows. */
+#  define setsockopt(Fd, Lvl, Optname, Optval, Optlen) \
+          setsockopt((Fd), (Lvl), (Optname), (const void*) (Optval), (Optlen))
+
 # else /* !WIN32: Assume UNIX-style headers for networking. */
 
 #  include <sys/types.h>
